# hs-readingList

./: LICENSE  README.md  ReadingList.cabal
app/: Main.hs
src/: Lib.hs
