name:                ReadingList
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ReadingList#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Benque
maintainer:          sebastian.benque@gmail.com
copyright:           2018 Sebastian Benque
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , time
  default-language:    Haskell2010

executable ReadingList
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ReadingList
                     , time
                     , monad-loops
                     , cassava
                     , vector
                     , bytestring
                     , text >= 1.2.2.0
                     , code-page
  default-language:    Haskell2010

test-suite ReadingList-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ReadingList
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ReadinList
